--- a/Pages/Documents.cshtml
+++ b/Pages/Documents.cshtml
@@ -10,7 +10,7 @@
 </style> <!-- Makes the footer stay at the bottom of the page when the scroll bar appears -->
 
 <p>
-    <img src="~/images/icons/word_256x256.png" alt="Word icon" style="width:256px; height:256px; ">
+    <img src="~/images/icons/word_256x256.png" alt="Word icon" style="width:256px; height:256px; float: left ">
     A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring
     which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which
     was created for the bliss of souls like mine.
@@ -34,32 +34,3 @@
     upon paper all that is living so full and warm within me, that it might be the mirror of my soul, as my
     soul is the mirror of the infinite God!
 </p>
-
-<div class="container">
-    <img class="container__image" src="~/images/icons/word_256x256.png">
-    <div class="container__text">
-        <h2>Why Do Cats Like Boxes?</h2>
-        <p>"Cats like boxes because they are cryptic animals; they like to hide," Stephen Zawistowski, science adviser for the American Society for the Prevention of Cruelty to Animals, told Business Insider. "And a box gives them a place of safety and security."</p>
-        <p>While inside a box, cats feel that they cannot be snuck up on from behind or the side — anything that wants to approach them must come directly into their field of vision. In effect, such hiding spaces allow them to watch the world around them without being seen.</p>
-    </div>
-</div>
-
-
-<style>
-.container {
-  max-width: 640px;
-  &__image {
-    display: inline-block;
-    vertical-align: top;
-    width: 46%;
-    margin: 20px 30px 0 0;
-  }
-  &__text {
-    display: inline-block;
-    width: 46%;
-    @@media (max-width: 620px) {
-      width: 100%;
-    }
-  }
-}
-    </style>
