Support for background-clip
-Added support for background-clip. (Shamelessly stolen from https://webplatform.news/issues/2018-11-02)
-Heading and Home links applied.
-Changed webpage background colour

--- a/Pages/AboutMe.cshtml
+++ b/Pages/AboutMe.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "About Me";
 }
 
-<h1 class="display-3">Welcome!</h1>
+<h1 style="font-size: 6em;" class="Gradient">Welcome!</h1>
 
 <p>This is a website to all things me. Yes I know that sounds egotistical but that's not the intention.</p>
 <p>I just wanted a website where I can store things I like, as well as  being able to say "yes I built a website and yes you can visit it right now"</p>
@@ -15,11 +15,12 @@
 <h3>Who am I?</h3>
 <p>My name is Callum Wellard. I was born on the 9th of september, 1998. That would make me @ViewData["CallumDOB"].</p>
 
-<p>I'm going to include a bunch of stuff here such as my CV as well as any pictures of myself. I'm not expecting to keep this website up to date but if I do then that 
-    would be pretty damn cool I can't deny.
+<p>
+    I'm going to include a bunch of stuff here such as my CV as well as any pictures of myself. 
+    I'm not expecting to keep this website up to date but if I do then that would be pretty damn cool I can't deny.
 </p>
 
-<a class="nav-link text-light" asp-area=""asp-page="/Pictures">Want to see pictures of cute me? Here ya go!</a>
+<a class="nav-link text-light" asp-area="" asp-page="/Pictures">Want to see pictures of cute me? Here ya go!</a>
 
 <h3>Socials</h3>
 <p>If you ever want to contact me then my socials are as followed:</p>
