Added framework for gradient text and images
-Updated headings to reflect gradient.
-Added support for enhanced section of text or images that can be eye-catching.
-Moved License CSS to site.css

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-#424242 border-bottom box-shadow mb-3">
             <div class="container">
-                <a style=" margin-bottom: 0px; font-family: Inter, sans-serif; font-size: 1em; line-height: 1.5em; font-weight: 700; letter-spacing: 0.013em;"class="Gradient" asp-area="" asp-page="/Index">Callum's Website</a>
+                <a style="font-family: Inter, sans-serif; font-size: 1em; line-height: 1.5em; font-weight: 700; letter-spacing: 0.013em;"class="Gradient" asp-area="" asp-page="/Index">Callum's Website</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -57,7 +57,7 @@
         <!-- Text in the footer -->
         <div class="container">
             <div class="footerText">
-                &copy; 2021 - MyWebsite - <a asp-area="" asp-page="/Privacy">Privacy</a> Last updated 2021/03/24
+                &copy; 2021 - MyWebsite - <a asp-area="" asp-page="/Privacy">Privacy</a> Last updated 2021/04/21
             </div>
         </div>
     </footer>
