--- a/Pages/Pictures.cshtml
+++ b/Pages/Pictures.cshtml
@@ -5,12 +5,12 @@
 }
 <style>.footer {position: relative;}</style> <!-- Makes the footer stay at the bottom of the page when the scroll bar appears -->
 
-<h1>Pictures of me!</h1>
+<h1 class="Gradient">Pictures of me!</h1>
 <p>Here are a few pictures of myself, they are sorted by Year, and then sorted by Month.</p>
 <p>Unfortunately the images have been scaled to 306px by 643px as they scale a lot better for webpages.</p>
 <p>The original images are around 1528px by 3216px. If I can find a way to get them to display on the webpage then I'll happily include them.</p>
 
-<h2>2021:</h2>
+<h2 class="Gradient">2021:</h2>
 <div> <!-- Legit only have this so I can collapse it in the IDE, this wont make it into the final version (I hope) -->
     <button class="accordion">March 2021</button>
     <div class="panel">
@@ -31,7 +31,7 @@
     </div>
 </div>
 
-<h3>2020:</h3>
+<h3 class="Gradient">2020:</h3>
 <div> <!-- Legit only have this so I can collapse it in the IDE, this wont make it into the final version (I hope) -->
     <button class="accordion">December 2020</button>
     <div class="panel">
@@ -83,7 +83,7 @@
     </div>
 </div>
 
-<h3>2019:</h3>
+<h3 class="Gradient">2019:</h3>
 <div> <!-- Legit only have this so I can collapse it in the IDE, this wont make it into the final version (I hope) -->
     <button class="accordion">December 2019</button>
     <div class="panel">
