--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -3,52 +3,48 @@
 @{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 class="Gradient">@ViewData["Title"]</h1>
 
 <p>This page is under construction as of @ViewData["TimeStamp"]..</p>
 <p>Feel free to use this website as you wish, it follows the MIT lisense meaning that this webpage's source code is open and free to use for your own projects.</p>
 <p>If you haven't already, <a href="https://github.com/Aluulu/MyWebsite">click the github link here.</a> It will bring you to this page's GitHub repository.</p>
 <p>I am open to help and suggestions, I am by no means a good web dev so please teach me <i>*insert a heart emote here or something. I dunno how web dev hearts work smh*</i></p>
 
-<style>
-    #License {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-        font-size: 80%;
-        line-height: 1.4;
-        font-style: italic;
-        background-color: #616161;
-    }
-</style>
-
-<div id="License">
-    <p>
-        MIT License
-    </p>
-    <p>
-        Copyright (c) 2021 Callum Wellard
-    </p>
-    <p>
-        Permission is hereby granted, free of charge, to any person obtaining a copy
-        of this software and associated documentation files (the "Software"), to deal
-        in the Software without restriction, including without limitation the rights
-        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-        copies of the Software, and to permit persons to whom the Software is
-        furnished to do so, subject to the following conditions:
-    </p>
-    <p>
-        The above copyright notice and this permission notice shall be included in all
-        copies or substantial portions of the Software.
-    </p>
-    <p>
-        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-        SOFTWARE.
-    </p>
+<div class="colour-gradient">
+    <div class="callout-content">
+        <div id="License">
+            <p>
+                MIT License
+            </p>
+            <p>
+                Copyright (c) 2021 Callum Wellard
+            </p>
+            <p>
+                Permission is hereby granted, free of charge, to any person obtaining a copy
+                of this software and associated documentation files (the "Software"), to deal
+                in the Software without restriction, including without limitation the rights
+                to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+                copies of the Software, and to permit persons to whom the Software is
+                furnished to do so, subject to the following conditions:
+            </p>
+            <p>
+                The above copyright notice and this permission notice shall be included in all
+                copies or substantial portions of the Software.
+            </p>
+            <p>
+                THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+                IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+                FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+                AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+                LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+                OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+                SOFTWARE.
+            </p>
+        </div>
+    </div>
 </div>
+
+
 <p>Want to learn more about MIT Licenses? Check out <a href="https://choosealicense.com/licenses/mit/">ChooseALicense.com.</a></p>
 
 <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
