--- a/Pages/AboutMe.cshtml
+++ b/Pages/AboutMe.cshtml
@@ -4,7 +4,9 @@
     ViewData["Title"] = "About Me";
 }
 
-<h1 style="font-size: 6em;border-bottom-width: 1.5rem; text-align: center;" class="Gradient">Welcome! to my amazing website</h1>
+<style>.footer {position: relative;}</style> <!-- Makes the footer stay at the bottom of the page when the scroll bar appears -->
+
+<h1 style="font-size: 6em; border-bottom-width: 1.5rem; text-align: center;" class="Gradient">Welcome!</h1>
 <p>I just wanted a website where I can store things I like, as well as  being able to say "yes I built a website and yes you can visit it right now"</p>
 
 <!-- Maybe insert the BigSmug emote here hehehehe -->
@@ -20,28 +22,44 @@
 
 <a class="nav-link text-light" asp-area="" asp-page="/Pictures">Want to see pictures of cute me? Here ya go!</a>
 
-<h3 class="Gradient">Socials</h3>
+<h3 class="Gradient">Personal achievements</h3>
+<p>
+    Used to be a pretty good <a href="https://osu.ppy.sh/">Osu!</a> player back in the day, I believe I was around rank 40,000 in the world when I used to play religiously.
+    Unfortunately I can't find my ranking, nor a screenshot that proves this so you will just have to take my word on it.
+</p>
+<p>
+    I used to be a community Moderator for the game
+    <a href="https://store.steampowered.com/app/544920/Darwin_Project/">Darwin Project</a>
+    back when that game was still active, unfortunately it's no longer in development and I no longer play it.
+</p>
+<p>
+    I used to be a platinum 1 player on
+    <a href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/">Rainbow Six Siege</a>
+    back when I played that religiously as well, not only that but I did it being a solo player. I don't play it anymore but oh my god is that an achievement, huh?
+</p>
+
+    <h3 class="Gradient">Socials</h3>
 <p>If you ever want to contact me then my socials are as followed:</p>
 
+<div class="colour-gradient">
+    <div class="callout-content">
         <div class="InvertSvgColour">
-            <p>
-                <a href="https://www.youtube.com/channel/UCR6F4uDpl-NWs5-GULFKxFg">
-                    <img src="~/images/icons/youtube.png" alt="YouTube icon" style="width:64px; height:64px;">
-                </a>
-                <a href="https://steamcommunity.com/profiles/76561198184642273/">
-                    <img src="~/images/icons/steam.png" alt="Steam icon" style="width:64px; height:64px;">
-                </a>
-                <a href="https://twitter.com/Alulcard">
-                    <img src="~/images/icons/twitter.png" alt="Twitter icon" style="width:64px; height:64px;">
-                </a>
-                <a href="https://www.reddit.com/user/Alulcard/">
-                    <img src="~/images/icons/reddit.png" alt="Reddit icon" style="width:64px; height:64px;">
-                </a>
-                <a href="https://github.com/Aluulu">
-                    <img src="~/images/icons/github.png" alt="Github icon" style="width:64px; height:64px;">
-                </a>
-            </p>
+            <a href="https://www.youtube.com/channel/UCR6F4uDpl-NWs5-GULFKxFg">
+                <img src="~/images/icons/youtube.png" alt="YouTube icon" style="width:64px; height:64px;">
+            </a>
+            <a href="https://steamcommunity.com/profiles/76561198184642273/">
+                <img src="~/images/icons/steam.png" alt="Steam icon" style="width:64px; height:64px;">
+            </a>
+            <a href="https://twitter.com/Alulcard">
+                <img src="~/images/icons/twitter.png" alt="Twitter icon" style="width:64px; height:64px;">
+            </a>
+            <a href="https://www.reddit.com/user/Alulcard/">
+                <img src="~/images/icons/reddit.png" alt="Reddit icon" style="width:64px; height:64px;">
+            </a>
+            <a href="https://github.com/Aluulu">
+                <img src="~/images/icons/github.png" alt="Github icon" style="width:64px; height:64px;">
+            </a>
         </div>
+    </div>
+</div>
 <!-- https://www.flaticon.com/packs/social-media-51 -->
-
-<div class="background-gradient"></div>
