--- a/Pages/Documents.cshtml
+++ b/Pages/Documents.cshtml
@@ -3,11 +3,7 @@
 @{
 }
 
-<style>
-    .footer {
-        position: relative;
-    }
-</style> <!-- Makes the footer stay at the bottom of the page when the scroll bar appears -->
+<style>.footer {position: relative;}</style> <!-- Makes the footer stay at the bottom of the page when the scroll bar appears -->
 
 <p>
     <img src="~/images/icons/word_256x256.png" alt="Word icon" style="width:256px; height:256px; float: left ">
