--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -3,6 +3,9 @@
 @{
     ViewData["Title"] = "Privacy Policy";
 }
+
+<style>.footer {position: relative;}</style> <!-- Makes the footer stay at the bottom of the page when the scroll bar appears -->
+
 <h1 class="Gradient">@ViewData["Title"]</h1>
 
 <p>This page is under construction as of @ViewData["TimeStamp"]..</p>
