--- a/Pages/Documents.cshtml
+++ b/Pages/Documents.cshtml
@@ -5,17 +5,48 @@
 
 <style>.footer {position: relative;}</style> <!-- Makes the footer stay at the bottom of the page when the scroll bar appears -->
 
+<h1 style="font-size: 6em; border-bottom-width: 1.5rem; text-align: center;" class="Gradient">Documents!</h1>
+
+<h2 class="Gradient">My CV:</h2>
 <p>
-    <img src="~/images/icons/word_256x256.png" alt="Word icon" style="width:256px; height:256px; float: left ">
     A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring
     which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which
     was created for the bliss of souls like mine.
+    <div class="InvertSvgColour">
+        <a href="/documents/CV.docx" download>
+            <img src="/images/icons/DOCX Icon.svg" alt="Download as a .docx" style="float: right; text-align:right; width:64px; height:64px">
+        </a>
+        <a href="/documents/CV.pdf" download>
+            <img src="/images/icons/PDF Icon.svg" alt="Download as a .pdf" style="float: right; text-align:right; width:64px; height:64px">
+        </a>
+    </div>
 </p>
 <p>
     I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence,
     that I neglect my talents. I should be incapable of drawing a single stroke at the present moment;
     and yet I feel that I never was a greater artist than now.
 </p>
+
+<div class="colour-gradient">
+    <div class="callout-content">
+        <div id="License">
+            <p style="text-align:left">
+                <div class="InvertSvgColour">
+                    <a href="/documents/CV.docx" download>
+                        <img src="/images/icons/DOCX Icon.svg" alt="Download as a .docx" style="float: right; text-align:right; width:128px; height:128px">
+                    </a>
+                    <a href="/documents/CV.pdf" download>
+                        <img src="/images/icons/PDF Icon.svg" alt="Download as a .pdf" style="float: right; text-align:right; width:128px; height:128px">
+                    </a>
+                </div>
+                Want to download these files in a .docx or .pdf format?
+            </p>
+            <p style="text-align:left">.docx for editting and familiarity</p>
+            <p style="text-align:left">.pdf for viewing and consistency</p>
+            <p style="text-align:left">Just click on a file type to begin downloading</p>
+        </div>
+    </div>
+</div>
 
 <p>
     When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface
