--- a/Pages/AboutMe.cshtml
+++ b/Pages/AboutMe.cshtml
@@ -43,7 +43,7 @@
 
 <div class="colour-gradient">
     <div class="callout-content">
-        <div class="InvertSvgColour">
+        <div class="InvertSvgColour" style="text-align:center">
             <a href="https://www.youtube.com/channel/UCR6F4uDpl-NWs5-GULFKxFg">
                 <img src="~/images/icons/youtube.png" alt="YouTube icon" style="width:64px; height:64px;">
             </a>
