Displaying correct title in Documents.cshtml

--- a/Pages/Documents.cshtml
+++ b/Pages/Documents.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model MyWebsite.Pages.DocumentsModel
 @{
+    ViewData["Title"] = "Documents";
 }
 
 <style>.footer {position: relative;}</style> <!-- Makes the footer stay at the bottom of the page when the scroll bar appears -->
