--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -39,6 +39,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-page="/Documents">Documents</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-page="/Test">Test</a>
+                        </li>
                     </ul>
                 </div>
             </div>
