Adjusted from Dark Mode to Light Mode.

--- a/Pages/AboutMe.cshtml
+++ b/Pages/AboutMe.cshtml
@@ -6,23 +6,23 @@
 
 <style>.footer {position: relative;}</style> <!-- Makes the footer stay at the bottom of the page when the scroll bar appears -->
 
-<h1 style="font-size: 6em; border-bottom-width: 1.5rem; text-align: center;" class="Gradient">Welcome!</h1>
+<h1>Welcome!</h1>
 <p>I just wanted a website where I can store things I like, as well as  being able to say "yes I built a website and yes you can visit it right now"</p>
 
 <!-- Maybe insert the BigSmug emote here hehehehe -->
 <!-- Or maybe a picture of myself since that would fit the theme -->
 
-<h3 class="Gradient">Who am I?</h3>
-<p>My name is Callum Wellard. I was born on the 9th of september, 1998. That would make me @ViewData["CallumDOB"].</p>
+<h2>Who am I?</h2>
+<p>My name is Callum Wellard. I was born on the 9th of September, 1998. That would make me @ViewData["CallumDOB"].</p>
 
 <p>
     I'm going to include a bunch of stuff here such as my CV as well as any pictures of myself.
     I'm not expecting to keep this website up to date but if I do then that would be pretty damn cool I can't deny.
 </p>
 
-<a class="nav-link text-light" asp-area="" asp-page="/Pictures">Want to see pictures of cute me? Here ya go!</a>
+<a class="nav-link text-dark" asp-area="" asp-page="/Pictures">Want to see pictures of cute me? Here ya go!</a>
 
-<h3 class="Gradient">Personal achievements</h3>
+<h2>Personal achievements</h2>
 <p>
     Used to be a pretty good <a href="https://osu.ppy.sh/">Osu!</a> player back in the day, I believe I was around rank 40,000 in the world when I used to play religiously.
     Unfortunately I can't find my ranking, nor a screenshot that proves this so you will just have to take my word on it.
@@ -38,12 +38,12 @@
     back when I played that religiously as well, not only that but I did it being a solo player. I don't play it anymore but oh my god is that an achievement, huh?
 </p>
 
-    <h3 class="Gradient">Socials</h3>
+    <h2">Socials</h2>
 <p>If you ever want to contact me then my socials are as followed:</p>
 
 <div class="colour-gradient">
     <div class="callout-content">
-        <div class="InvertSvgColour" style="text-align:center">
+        <div style="text-align:center">
             <a href="https://www.youtube.com/channel/UCR6F4uDpl-NWs5-GULFKxFg">
                 <img src="~/images/icons/youtube.png" alt="YouTube icon" style="width:64px; height:64px;">
             </a>
