--- a/Pages/Documents.cshtml
+++ b/Pages/Documents.cshtml
@@ -6,21 +6,21 @@
 
 <style>.footer {position: relative;}</style> <!-- Makes the footer stay at the bottom of the page when the scroll bar appears -->
 
-<h1 style="font-size: 6em; border-bottom-width: 1.5rem; text-align: center;" class="Gradient">Documents!</h1>
+<h1">@ViewData["Title"]</h1>
 
-<h2 class="Gradient">My CV:</h2>
+<h2">My CV:</h2>
 <p>
     A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring
     which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which
     was created for the bliss of souls like mine.
-    <div class="InvertSvgColour">
+ 
         <a href="/documents/CV.docx" download>
             <img src="/images/icons/DOCX Icon.svg" alt="Download as a .docx" style="float: right; text-align:right; width:64px; height:64px">
         </a>
         <a href="/documents/CV.pdf" download>
             <img src="/images/icons/PDF Icon.svg" alt="Download as a .pdf" style="float: right; text-align:right; width:64px; height:64px">
         </a>
-    </div>
+
 </p>
 <p>
     I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence,
@@ -32,14 +32,12 @@
     <div class="callout-content">
         <div id="License">
             <p style="text-align:left">
-                <div class="InvertSvgColour">
                     <a href="/documents/CV.docx" download>
                         <img src="/images/icons/DOCX Icon.svg" alt="Download as a .docx" style="float: right; text-align:right; width:128px; height:128px">
                     </a>
                     <a href="/documents/CV.pdf" download>
                         <img src="/images/icons/PDF Icon.svg" alt="Download as a .pdf" style="float: right; text-align:right; width:128px; height:128px">
                     </a>
-                </div>
                 Want to download these files in a .docx or .pdf format?
             </p>
             <p style="text-align:left">.docx for editting and familiarity</p>
