--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -6,7 +6,7 @@
 
 <style>.footer {position: relative;}</style> <!-- Makes the footer stay at the bottom of the page when the scroll bar appears -->
 
-<h1 class="Gradient">@ViewData["Title"]</h1>
+<h1">@ViewData["Title"]</h1>
 
 <p>This page is under construction as of @ViewData["TimeStamp"]..</p>
 <p>Feel free to use this website as you wish, it follows the MIT lisense meaning that this webpage's source code is open and free to use for your own projects.</p>
