--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -2,43 +2,55 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 /* navbar */
-.navbar-default {
-    background-color: #424242;
-    border-color: #E7E7E7;
-
+.bd-navbar {
+    background-color: #563d7c;
 }
 
 .nav-item {
     margin-bottom: 0px;
     font-family: Inter, sans-serif;
-    color: #fff;
+    color: #7952b3 !important;
     font-size: 1em;
     line-height: 1.5em;
     font-weight: 700;
     letter-spacing: 0.013em;
 }
 
+.h1 {
+    color: #303030;
+    font-weight:500;
+    font-size: 2.5rem;
+    line-height: 1.2;
+}
+
+.h2 {
+    color: #212529;
+    font-size: 2rem;
+    font-weight: 500;
+    line-height: 1.2;
+}
+
 /* Provide sufficient contrast against black background */
-/* Controls Hyperlink colour */
+/* Controls Hyperlink colour (Default blue) */
 a {
-    color: #A3CEDC;
+
 }
 
     /* mouse over link  */
     a:hover {
-        color: #537E8C;
+        color: #7952b3;
     }
 
 .btn-primary {
-    color: #fff;
+    color: black;
     background-color: #1b6ec2;
     border-color: #1861ac;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
+    color: #7952b3;
+    background-color: #7952b3;
+    border-color: #7952b3;
 }
 
 /* Sticky footer styles
@@ -78,8 +90,8 @@ html {
 }
 
 body {
-    background-color: #1c1e27; /*  Colour of background in body */
-    color: white; /* Colour of text in body */
+    background-color: #fff; /*  Colour of background in body */
+    color: black; /* Colour of text in body */
     /* https://uxdesign.cc/dark-mode-ui-design-the-definitive-guide-part-1-color-53dcfaea5129 */
 
     text-align: justify;
@@ -140,9 +152,17 @@ body, html {
 
 /* Apply these styles to the text, excludes the header and footer */
 .textStyleCSS {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 120%;
-    line-height: 1.4;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+}
+
+
+.footerText {
+    color: black;
 }
 
 .noteCSS {
@@ -193,7 +213,7 @@ body, html {
     -ms-grid-rows: auto;
     grid-template-rows: auto;
     border-radius: 8px;
-    background-color: #1d1e22;
+    background-color: #fff;
 }
 
 .colour-gradient {
@@ -224,12 +244,6 @@ div.responsiveText {
         font-size: 1.5em;
     }
 }
-
-
-
-
-
-
 
 * {
     box-sizing: border-box;
