--- a/Pages/Documents.cshtml
+++ b/Pages/Documents.cshtml
@@ -6,9 +6,9 @@
 
 <style>.footer {position: relative;}</style> <!-- Makes the footer stay at the bottom of the page when the scroll bar appears -->
 
-<h1">@ViewData["Title"]</h1>
+<h1 class="heading1">@ViewData["Title"]</h1>
 
-<h2">My CV:</h2>
+<h2 class="heading2">My CV:</h2>
 <p>
     A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring
     which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which
