--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -6,9 +6,8 @@
 
 <style>.footer {position: relative;}</style> <!-- Makes the footer stay at the bottom of the page when the scroll bar appears -->
 
-<h1">@ViewData["Title"]</h1>
+<h1 class="heading1">@ViewData["Title"]</h1>
 
-<p>This page is under construction as of @ViewData["TimeStamp"]..</p>
 <p>Feel free to use this website as you wish, it follows the MIT lisense meaning that this webpage's source code is open and free to use for your own projects.</p>
 <p>If you haven't already, <a href="https://github.com/Aluulu/MyWebsite">click the github link here.</a> It will bring you to this page's GitHub repository.</p>
 <p>I am open to help and suggestions, I am by no means a good web dev so please teach me <i>*insert a heart emote here or something. I dunno how web dev hearts work smh*</i></p>
