--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -21,10 +21,6 @@
                     <ul class="navbar-nav flex-grow-1">
 
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-
-                        <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-page="/AboutMe">About Me</a>
                         </li>
 
@@ -42,6 +38,10 @@
 
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-page="/Test">Test</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-page="/What'sNew">What's new</a>
                         </li>
                     </ul>
                 </div>
@@ -61,7 +61,7 @@
         <!-- Text in the footer -->
         <div class="container">
             <div class="footerText">
-                &copy; 2021 - MyWebsite - <a asp-area="" asp-page="/Privacy">Privacy</a> Last updated 2021/05/04
+                &copy; 2021 - MyWebsite - <a asp-area="" asp-page="/Privacy">Privacy</a> Last updated 2021/05/07
             </div>
         </div>
     </footer>
