--- a/Pages/AboutMe.cshtml
+++ b/Pages/AboutMe.cshtml
@@ -6,7 +6,7 @@
 
 <style>.footer {position: relative;}</style> <!-- Makes the footer stay at the bottom of the page when the scroll bar appears -->
 
-<h1>Welcome!</h1>
+<h1 class="heading1">Welcome!</h1>
 <p>I just wanted a website where I can store things I like, as well as  being able to say "yes I built a website and yes you can visit it right now"</p>
 
 <!-- Maybe insert the BigSmug emote here hehehehe -->
