--- a/Pages/AboutMe.cshtml
+++ b/Pages/AboutMe.cshtml
@@ -12,7 +12,7 @@
 <!-- Maybe insert the BigSmug emote here hehehehe -->
 <!-- Or maybe a picture of myself since that would fit the theme -->
 
-<h2>Who am I?</h2>
+<h2 class="heading2">Who am I?</h2>
 <p>My name is Callum Wellard. I was born on the 9th of September, 1998. That would make me @ViewData["CallumDOB"].</p>
 
 <p>
@@ -22,7 +22,7 @@
 
 <a class="nav-link text-dark" asp-area="" asp-page="/Pictures">Want to see pictures of cute me? Here ya go!</a>
 
-<h2>Personal achievements</h2>
+<h2 class="heading2">Personal achievements</h2>
 <p>
     Used to be a pretty good <a href="https://osu.ppy.sh/">Osu!</a> player back in the day, I believe I was around rank 40,000 in the world when I used to play religiously.
     Unfortunately I can't find my ranking, nor a screenshot that proves this so you will just have to take my word on it.
@@ -38,7 +38,7 @@
     back when I played that religiously as well, not only that but I did it being a solo player. I don't play it anymore but oh my god is that an achievement, huh?
 </p>
 
-    <h2">Socials</h2>
+<h2 class="heading2">Socials</h2>
 <p>If you ever want to contact me then my socials are as followed:</p>
 
 <div class="colour-gradient">
