--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -9,45 +9,50 @@
     <link rel="shortcut icon" type="image/ico" href="~/favicon.ico">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-#7952b3 border-bottom box-shadow mb-3 bd-navbar">
-            <div class="container">
-                <a style="font-family: Inter, sans-serif; font-size: 1em; line-height: 1.5em; font-weight: 700; letter-spacing: 0.013em;" class="Gradient" asp-area="" asp-page="/Index">Callum's Website</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+    <div class="header">
+        <div class="progress-container">
+            <header>
+                <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-#7952b3 border-bottom box-shadow bd-navbar">
+                    <div class="container">
+                        <a style="font-family: Inter, sans-serif; font-size: 1em; line-height: 1.5em; font-weight: 700; letter-spacing: 0.013em;" class="Gradient" asp-area="" asp-page="/Index">Callum's Website</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                                aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                            <ul class="navbar-nav flex-grow-1">
 
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/AboutMe">About Me</a>
-                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-page="/AboutMe">About Me</a>
+                                </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-page="/Privacy">Privacy</a>
+                                </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Pictures">Pictures</a>
-                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-page="/Pictures">Pictures</a>
+                                </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Documents">Documents</a>
-                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-page="/Documents">Documents</a>
+                                </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/Test">Test</a>
-                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-page="/Test">Test</a>
+                                </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-page="/What'sNew">What's new</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-page="/What'sNew">What's new</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </header>
+            <div class="progress-bar" id="myBar"></div>
+        </div>
+    </div>
     <div class="container">
         <main role="main" class="pb-3">
             <div class="textStyleCSS">
@@ -69,6 +74,17 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script>
+        // When the user scrolls the page, execute myFunction
+        window.onscroll = function () { myFunction() };
+
+        function myFunction() {
+            var winScroll = document.body.scrollTop || document.documentElement.scrollTop;
+            var height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
+            var scrolled = (winScroll / height) * 100;
+            document.getElementById("myBar").style.width = scrolled + "%";
+        }
+    </script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
