--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -68,10 +68,6 @@ html {
     border-top: 0.0625em solid #e5e5e5; /* Was 1px */
 }
 
-.border-bottom {
-    border-bottom: 0.0625em solid #e5e5e5; /* Was 1px */
-}
-
 .box-shadow {
     box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
@@ -346,3 +342,28 @@ div.responsiveText {
 .iconsSpace {
     margin-right: 8px;
 }
+
+/* --- Scroll indicator --- */
+/* Style the header: fixed position (always stay at the top) */
+.header {
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    background-color: #f1f1f1;
+}
+
+/* The progress container (grey background) */
+.progress-container {
+    width: 100%;
+    height: 8px;
+    background: #ccc;
+}
+
+/* The progress bar (scroll indicator) */
+.progress-bar {
+    height: 8px;
+    background: #9e68ed;
+    width: 0%;
+}
+/* --- Scroll indicator --- */
