--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -348,3 +348,9 @@ div.responsiveText {
 .iconsSpace {
     margin-right: 8px;
 }
+
+.code {
+    font-size: 87.5%;
+    color: #e83e8c;
+    word-wrap: break-word;
+}
